--- a/index.html
+++ b/index.html
@@ -10,5 +10,11 @@
 <body>
 <div id="root"></div>
 <script src="src/index.js"></script>
+<style>
+  body {
+    padding: 0;
+    margin: 0;
+  }
+</style>
 </body>
 </html>
